--- a/.github/workflows/check-test-style.yaml
+++ b/.github/workflows/check-test-style.yaml
@@ -1,4 +1,4 @@
-name: Tests
+kname: Tests
 on: push
 
 jobs:
@@ -14,6 +14,9 @@ jobs:
 
       - name: Install tools
         run: python -m pip install --upgrade pip pytest
+
+      - name: Install requests and pandas modules
+        run: python -m pip install requests pandas
 
       - name: Test with unittest
         run: python3 -m unittest test.py
